src/main/antlr/.antlr/MdtExprParser.java
// Generated from /home/kwlee/development/mdt/mdt-client/src/main/antlr/MdtExpr.g4 by ANTLR 4.13.1

package mdt.model.expr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MdtExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, NULL=35, BOOLEAN=36, ISO8601_DURATION=37, 
		TIMESTAMP=38, ID=39, INTEGER=40, FLOAT=41, STRING=42, WS=43;
	public static final int
		RULE_start = 0, RULE_expr = 1, RULE_nullExpr = 2, RULE_assignmentExpr = 3, 
		RULE_fullInstanceSpec = 4, RULE_instanceSpec = 5, RULE_submodelSpec = 6, 
		RULE_defaultSubmodelSpec = 7, RULE_idBasedSubmodelSpec = 8, RULE_fullElementSpec = 9, 
		RULE_defaultElementSpec = 10, RULE_idShortPath = 11, RULE_idShortSeg = 12, 
		RULE_parameterSpec = 13, RULE_argumentSpec = 14, RULE_opVarSpec = 15, 
		RULE_timeseriesSpec = 16, RULE_tsRangeSpec = 17, RULE_tsRangeLastSpec = 18, 
		RULE_tsRangeAnchor = 19, RULE_durationValue = 20, RULE_tsRangeAbsoluteSpec = 21, 
		RULE_tsProjectionSpec = 22, RULE_valueLiteralSpec = 23, RULE_propertyValueLiteralSpec = 24, 
		RULE_mlpPropertyValueLiteralSpec = 25, RULE_fileValueLiteralSpec = 26, 
		RULE_rangeValueLiteralSpec = 27, RULE_durationLiteralSpec = 28, RULE_iso8601DurationLiteralSpec = 29, 
		RULE_idOrString = 30, RULE_keyword = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "expr", "nullExpr", "assignmentExpr", "fullInstanceSpec", "instanceSpec", 
			"submodelSpec", "defaultSubmodelSpec", "idBasedSubmodelSpec", "fullElementSpec", 
			"defaultElementSpec", "idShortPath", "idShortSeg", "parameterSpec", "argumentSpec", 
			"opVarSpec", "timeseriesSpec", "tsRangeSpec", "tsRangeLastSpec", "tsRangeAnchor", 
			"durationValue", "tsRangeAbsoluteSpec", "tsProjectionSpec", "valueLiteralSpec", 
			"propertyValueLiteralSpec", "mlpPropertyValueLiteralSpec", "fileValueLiteralSpec", 
			"rangeValueLiteralSpec", "durationLiteralSpec", "iso8601DurationLiteralSpec", 
			"idOrString", "keyword"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'mdt'", "':'", "'idShort'", "'submodel'", "'id'", "'param'", 
			"'oparg'", "'opvar'", "'timeseries'", "'.'", "'['", "']'", "'*'", "'in'", 
			"'out'", "'inout'", "'#'", "'|'", "'last'", "'@'", "'now'", "'latest'", 
			"'~'", "','", "'-'", "'file'", "'('", "')'", "'ms'", "'s'", "'m'", "'h'", 
			"'d'", "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "NULL", 
			"BOOLEAN", "ISO8601_DURATION", "TIMESTAMP", "ID", "INTEGER", "FLOAT", 
			"STRING", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MdtExpr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MdtExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MdtExprParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			expr();
			setState(65);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public ValueLiteralSpecContext valueLiteralSpec() {
			return getRuleContext(ValueLiteralSpecContext.class,0);
		}
		public SubmodelSpecContext submodelSpec() {
			return getRuleContext(SubmodelSpecContext.class,0);
		}
		public FullElementSpecContext fullElementSpec() {
			return getRuleContext(FullElementSpecContext.class,0);
		}
		public AssignmentExprContext assignmentExpr() {
			return getRuleContext(AssignmentExprContext.class,0);
		}
		public NullExprContext nullExpr() {
			return getRuleContext(NullExprContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expr);
		try {
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				valueLiteralSpec();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				submodelSpec();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(69);
				fullElementSpec();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(70);
				assignmentExpr();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(71);
				nullExpr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NullExprContext extends ParserRuleContext {
		public TerminalNode NULL() { return getToken(MdtExprParser.NULL, 0); }
		public NullExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nullExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).enterNullExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).exitNullExpr(this);
		}
	}

	public final NullExprContext nullExpr() throws RecognitionException {
		NullExprContext _localctx = new NullExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_nullExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(NULL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentExprContext extends ParserRuleContext {
		public List<FullElementSpecContext> fullElementSpec() {
			return getRuleContexts(FullElementSpecContext.class);
		}
		public FullElementSpecContext fullElementSpec(int i) {
			return getRuleContext(FullElementSpecContext.class,i);
		}
		public ValueLiteralSpecContext valueLiteralSpec() {
			return getRuleContext(ValueLiteralSpecContext.class,0);
		}
		public AssignmentExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignmentExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).enterAssignmentExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).exitAssignmentExpr(this);
		}
	}

	public final AssignmentExprContext assignmentExpr() throws RecognitionException {
		AssignmentExprContext _localctx = new AssignmentExprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assignmentExpr);
		try {
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				fullElementSpec();
				setState(77);
				match(T__0);
				setState(78);
				valueLiteralSpec();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				fullElementSpec();
				setState(81);
				match(T__0);
				setState(82);
				fullElementSpec();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FullInstanceSpecContext extends ParserRuleContext {
		public InstanceSpecContext instanceSpec() {
			return getRuleContext(InstanceSpecContext.class,0);
		}
		public FullInstanceSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fullInstanceSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).enterFullInstanceSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).exitFullInstanceSpec(this);
		}
	}

	public final FullInstanceSpecContext fullInstanceSpec() throws RecognitionException {
		FullInstanceSpecContext _localctx = new FullInstanceSpecContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fullInstanceSpec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(T__1);
			setState(87);
			match(T__2);
			setState(88);
			instanceSpec();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstanceSpecContext extends ParserRuleContext {
		public IdOrStringContext idOrString() {
			return getRuleContext(IdOrStringContext.class,0);
		}
		public InstanceSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instanceSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).enterInstanceSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).exitInstanceSpec(this);
		}
	}

	public final InstanceSpecContext instanceSpec() throws RecognitionException {
		InstanceSpecContext _localctx = new InstanceSpecContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_instanceSpec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			idOrString();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SubmodelSpecContext extends ParserRuleContext {
		public DefaultSubmodelSpecContext defaultSubmodelSpec() {
			return getRuleContext(DefaultSubmodelSpecContext.class,0);
		}
		public IdBasedSubmodelSpecContext idBasedSubmodelSpec() {
			return getRuleContext(IdBasedSubmodelSpecContext.class,0);
		}
		public SubmodelSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_submodelSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).enterSubmodelSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).exitSubmodelSpec(this);
		}
	}

	public final SubmodelSpecContext submodelSpec() throws RecognitionException {
		SubmodelSpecContext _localctx = new SubmodelSpecContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_submodelSpec);
		try {
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				defaultSubmodelSpec();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				idBasedSubmodelSpec();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefaultSubmodelSpecContext extends ParserRuleContext {
		public InstanceSpecContext instanceSpec() {
			return getRuleContext(InstanceSpecContext.class,0);
		}
		public IdOrStringContext idOrString() {
			return getRuleContext(IdOrStringContext.class,0);
		}
		public DefaultSubmodelSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defaultSubmodelSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).enterDefaultSubmodelSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).exitDefaultSubmodelSpec(this);
		}
	}

	public final DefaultSubmodelSpecContext defaultSubmodelSpec() throws RecognitionException {
		DefaultSubmodelSpecContext _localctx = new DefaultSubmodelSpecContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_defaultSubmodelSpec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			instanceSpec();
			setState(97);
			match(T__2);
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(98);
				match(T__3);
				setState(99);
				match(T__0);
				}
				break;
			}
			setState(102);
			idOrString();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdBasedSubmodelSpecContext extends ParserRuleContext {
		public IdOrStringContext idOrString() {
			return getRuleContext(IdOrStringContext.class,0);
		}
		public IdBasedSubmodelSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idBasedSubmodelSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).enterIdBasedSubmodelSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).exitIdBasedSubmodelSpec(this);
		}
	}

	public final IdBasedSubmodelSpecContext idBasedSubmodelSpec() throws RecognitionException {
		IdBasedSubmodelSpecContext _localctx = new IdBasedSubmodelSpecContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_idBasedSubmodelSpec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(T__4);
			setState(105);
			match(T__2);
			setState(106);
			match(T__5);
			setState(107);
			match(T__0);
			setState(108);
			idOrString();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FullElementSpecContext extends ParserRuleContext {
		public ParameterSpecContext parameterSpec() {
			return getRuleContext(ParameterSpecContext.class,0);
		}
		public ArgumentSpecContext argumentSpec() {
			return getRuleContext(ArgumentSpecContext.class,0);
		}
		public OpVarSpecContext opVarSpec() {
			return getRuleContext(OpVarSpecContext.class,0);
		}
		public TimeseriesSpecContext timeseriesSpec() {
			return getRuleContext(TimeseriesSpecContext.class,0);
		}
		public DefaultElementSpecContext defaultElementSpec() {
			return getRuleContext(DefaultElementSpecContext.class,0);
		}
		public FullElementSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fullElementSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).enterFullElementSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).exitFullElementSpec(this);
		}
	}

	public final FullElementSpecContext fullElementSpec() throws RecognitionException {
		FullElementSpecContext _localctx = new FullElementSpecContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_fullElementSpec);
		try {
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				match(T__6);
				setState(111);
				match(T__2);
				setState(112);
				parameterSpec();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				match(T__7);
				setState(114);
				match(T__2);
				setState(115);
				argumentSpec();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(116);
				match(T__8);
				setState(117);
				match(T__2);
				setState(118);
				opVarSpec();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(119);
				match(T__9);
				setState(120);
				match(T__2);
				setState(121);
				timeseriesSpec();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(122);
				defaultElementSpec();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefaultElementSpecContext extends ParserRuleContext {
		public SubmodelSpecContext submodelSpec() {
			return getRuleContext(SubmodelSpecContext.class,0);
		}
		public IdShortPathContext idShortPath() {
			return getRuleContext(IdShortPathContext.class,0);
		}
		public DefaultElementSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defaultElementSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).enterDefaultElementSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).exitDefaultElementSpec(this);
		}
	}

	public final DefaultElementSpecContext defaultElementSpec() throws RecognitionException {
		DefaultElementSpecContext _localctx = new DefaultElementSpecContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_defaultElementSpec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			submodelSpec();
			setState(126);
			match(T__2);
			setState(127);
			idShortPath();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdShortPathContext extends ParserRuleContext {
		public IdOrStringContext idOrString() {
			return getRuleContext(IdOrStringContext.class,0);
		}
		public List<IdShortSegContext> idShortSeg() {
			return getRuleContexts(IdShortSegContext.class);
		}
		public IdShortSegContext idShortSeg(int i) {
			return getRuleContext(IdShortSegContext.class,i);
		}
		public IdShortPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idShortPath; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).enterIdShortPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).exitIdShortPath(this);
		}
	}

	public final IdShortPathContext idShortPath() throws RecognitionException {
		IdShortPathContext _localctx = new IdShortPathContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_idShortPath);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			idOrString();
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__10 || _la==T__11) {
				{
				{
				setState(130);
				idShortSeg();
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdShortSegContext extends ParserRuleContext {
		public IdOrStringContext idOrString() {
			return getRuleContext(IdOrStringContext.class,0);
		}
		public TerminalNode INTEGER() { return getToken(MdtExprParser.INTEGER, 0); }
		public IdShortSegContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idShortSeg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).enterIdShortSeg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdtExprListener ) ((MdtExprListener)listener).exitIdShortSeg(this);
		}
	}

	public final IdShortSegContext idShortSeg() throws RecognitionException {
		IdShortSegContext _localctx = new IdShortSegContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_idShortSeg);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				match(T__10);
				setState(137);
				idOrString();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				match(T__11);
				setState(139);
				match(INTEGER);
				setState(140);
				match(T__12);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
